<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveInfoDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dialog_profile"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/user_img_jin"
            app:civ_border_overlay="true"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dialog_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/dialog_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_profile" />

        <EditText
            android:id="@+id/dialog_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/dialog_phone_number"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/dialog_name"
            app:layout_constraintStart_toStartOf="@id/dialog_name"
            app:layout_constraintTop_toTopOf="@id/dialog_name" />

        <EditText
            android:id="@+id/dialog_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/dialog_email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/dialog_phone_number"
            app:layout_constraintStart_toStartOf="@id/dialog_phone_number"
            app:layout_constraintTop_toTopOf="@id/dialog_phone_number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_save"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/dialog_button"
            android:stateListAnimator="@null"
            android:text="@string/dialog_save"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_cancellation"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/dialog_button"
            android:stateListAnimator="@null"
            android:text="@string/dialog_cancellation"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/dialog_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/add"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_profile"
            app:layout_constraintStart_toEndOf="@+id/dialog_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>